--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input type="password" autocomplete="off" id="pw" placeholder="Password" required>
             <input type="submit" id="bt" value="Log in">
             <div class="form-footer">
-            <label for="rem">Sign Up?</label>
+            <a id="rem" href="/siginin.html">Sign Up?</a>
             <a href="#">Forgot password?</a>
             </div>
         </form>
